refactor(kitchenpos): DisplayedName 값 객체가 비속어 필터링도 포함하도록 검증 캡슐화